# asciidocr

./: .gitignore  Cargo.toml  LIMITATIONS.adoc  README.adoc  README.md  asciidoc_schema.json  bacon.toml  example.adoc  inlines.adoc  pyproject.toml  schema.json
.github/workflows/: issues.yaml
src/: asg.rs  block_metadata.rs  blocks.rs  cli.rs  docx.rs  errors.rs  inlines.rs  lib.rs  lists.rs  macros.rs  main.rs  metadata.rs  nodes.rs  output.rs  parse.rs  parser.rs  python.rs  scanner.rs  templates.rs  tokens.rs  utils.rs
src/backends/: docx.rs  htmls.rs  mod.rs  templates.rs  term.rs
src/backends/docx/: document.rs  mod.rs  numbering.rs  styles.rs  units.rs
src/backends/terminal/: components.rs  mod.rs  viewer.rs
src/graph/: asg.rs  blocks.rs  inlines.rs  lists.rs  macros.rs  metadata.rs  mod.rs  nodes.rs  substitutions.rs
src/scanner/: mod.rs  tokens.rs
templates/: htmlbook.html  htmlbook.html.tera
templates/asciidoctor/: asciidoctor.html.tera  block.html.tera  inline.html.tera  leafblocks.html.tera  listingblock.html.tera
templates/blocks/: block.html  block.html.tera
templates/docx/: reference.docx
templates/htmlbook/: block.html.jinja  block.html.tera  embed.html.jinja  embed.html.tera  htmlbook.html.jinja  htmlbook.html.tera  inline.html.jinja  inline.html.tera  leafblocks.html.tera  tables.html.tera
templates/inlines/: inline.html  inline.html.tera
tests/: asciidoctor_html_tests.rs  block_tests.rs  document_tests.rs  docx_tests.rs  htmlbook_tests.rs  inline_tests.rs  log_tests.rs  offset_tests.rs
tests/blocks/: document-header.json  para-internal-line-break.json  para-single-line.adoc  para-single-line.json  para-two-paras-line-between.json
tests/common/: mod.rs
tests/data/asciidoctor-html/: basic-format.html  blocks-code.adoc  blocks-code.html  blocks-open.adoc  blocks-open.html  blocks-ordered-list.adoc  blocks-ordered-list.html  blocks-unordered-list.adoc  blocks-unordered-list.html  paragraph.html
tests/data/blocks/: admonition-inline-eof.adoc  admonition-inline-eof.json  admonition-inline.adoc  admonition-inline.json  block-anchor.json  block-label.adoc  block-label.json  code-callouts.adoc  code-callouts.json  comment-eof.adoc  comment-eof.json  delimited-block-spaced.adoc  delimited-block-spaced.json  delimited-block.adoc  delimited-block.json  description-list-complex.adoc  description-list-complex.json  description-list-simple.adoc  description-list-simple.json  document-attr.adoc  document-attr.json  document-header.adoc  heading-with-dangling-hash.adoc  heading-with-dangling-hash.json  headings-sections.adoc  headings-sections.json  headings-to-offset.adoc  image-block-alt-text.adoc  image-block-alt-text.json  image-block-figure.adoc  image-block-figure.json  image-block.adoc  image-block.json  image-figure.adoc  include-lines.adoc  include-lines.json  include-respects-internal-breaks.adoc  include-respects-internal-breaks.json  include-tags-xml.adoc  include-tags-xml.json  (+50 more)
tests/data/documents/: minimum.adoc  nested-includes.adoc  title-only.adoc  (+10 more)
(+84 files in other folders)
