[package]
name = "asciidocr"
version = "0.1.1"
readme = "README.adoc"
license = "MIT"
edition = "2021"
description = "A CLI and library for processing and converting asciidoc files"
repository = "https://github.com/delfanbaum/asciidocr"
keywords = ["asciidoc", "lightweight markup", "htmlbook"]
categoreies = ["command-line-utilities", "parser-implementations", "text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
clap = {version = "4.5.20", features=["derive"]}
once_cell = "1.20.2"
regex = "1.11.1"
serde = {version = "1.0.210", features=["derive"]}
serde_json = "1.0.128"
tera = {version = "1.20.0", features=["builtins"]}

[dev-dependencies]
assert-json-diff = "2.0.2"
rstest = "0.23.0"
