[package]
name = "asciidocr"
version = "0.1.8"
readme = "README.md"
license = "MIT"
edition = "2021"
description = "A CLI and library for processing and converting asciidoc files"
repository = "https://github.com/delfanbaum/asciidocr"
keywords = ["asciidoc", "lightweight-markup", "htmlbook"]
categories = ["command-line-utilities", "parser-implementations", "text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
clap = {version = "4.5.20", features=["derive"]}
docx-rs = {version="0.4.17", optional=true}
log = "0.4.22"
once_cell = "1.20.2"
regex = "1.11.1"
serde = {version = "1.0.210", features=["derive"]}
serde_json = "1.0.128"
simple_logger = {version = "5.0.0", features=["colors"]}
tera = {version = "1.20.0", features=["builtins"]}

[dev-dependencies]
assert-json-diff = "2.0.2"
logtest = "2.0.0"
rstest = "0.25.0"
tempfile = "3.14.0"

[features]
docx = ["dep:docx-rs"]
